--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ global.json
 # node_modules
 src/data/user/202098742013198336.json
 src/data/user/849320259152117882.json
+src/data/guild/792908019071189022.json
+src/data/guild/797283404654575657.json
