--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
       "outDir": "./built",
       "allowJs": true,
-      "target": "es6"
+      "target": "ES6",
+      "module": "CommonJS"
     },
     "include": ["./src/**/*"]
   }
