--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@google-cloud/language": "^4.2.3",
     "@sapphire/async-queue": "^1.1.2",
     "bugsnag": "^2.4.3",
+    "discord-buttons": "^3.2.1",
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
     "express": "^4.17.1",
