--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "outDir": "./built",
       "allowJs": true,
       "target": "ES6",
-      "module": "CommonJS"
+      // "module": "CommonJS"
     },
     "include": ["./src/**/*"]
   }
