--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-schedule": "^2.0.0",
     "request": "^2.88.2",
     "slash-create": "^3.2.1",
+    "source-map-support": "^0.5.19",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
